@@ -3,6 +3,7 @@ package fr.igolta.simple_updater;
 import java.io.File;
 import java.io.IOException;
 import java.net.URI;
+import java.net.URL;
 
 public class MainTest {
 	public static void main(String[] args) {
@@ -10,7 +11,7 @@ public class MainTest {
 		File downloadFolder = new File(System.getProperty("user.home") + "/desktop/Test/");
 		
 		try {
-			new SimpleUpdater(URI.create("http://localhost/simple_updater/"), downloadFolder);
+			System.out.println(SimpleUpdater.downloadWithReq(new URL("http://localhost/simple_updater/")));
 		} catch (IllegalArgumentException e) {
 			e.printStackTrace();
 		} catch (IOException e) {
